fix 上传图片位置错误 update UI

--- a/src/common.css
+++ b/src/common.css
@@ -3,7 +3,12 @@ label {
   border: none;
   padding: 10px;
   margin: 5px;
-  background: #eee;
+  background: #333;
+  color: #eee;
+}
+.before {
+  background: #888;
+  color: #fff;
 }
 label {
   text-align: center;
@@ -11,4 +16,39 @@ label {
 }
 #file {
   display: none;
+}
+
+body {
+  background-color: #6d695c;
+  background-image: repeating-linear-gradient(
+      120deg,
+      rgba(255, 255, 255, 0.1),
+      rgba(255, 255, 255, 0.1) 1px,
+      transparent 1px,
+      transparent 60px
+    ),
+    repeating-linear-gradient(
+      60deg,
+      rgba(255, 255, 255, 0.1),
+      rgba(255, 255, 255, 0.1) 1px,
+      transparent 1px,
+      transparent 60px
+    ),
+    linear-gradient(
+      60deg,
+      rgba(0, 0, 0, 0.1) 25%,
+      transparent 25%,
+      transparent 75%,
+      rgba(0, 0, 0, 0.1) 75%,
+      rgba(0, 0, 0, 0.1)
+    ),
+    linear-gradient(
+      120deg,
+      rgba(0, 0, 0, 0.1) 25%,
+      transparent 25%,
+      transparent 75%,
+      rgba(0, 0, 0, 0.1) 75%,
+      rgba(0, 0, 0, 0.1)
+    );
+  background-size: 70px 120px;
 }
